[package]
name = "matono_client"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[dependencies]
bitflags = "1.3"
bytemuck = "1.9.1"
dyn-iter = "0.2.0"
fontdue = "0.7.2"
gltf = "1.0"
itertools = "0.10.3"
na = { package = "nalgebra", version = "0.31.0" }
owning_ref = "0.4.1"
seahash = "4.1"
winit = "0.26"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
#wgpu = { version = "0.12", features = ["spirv", "serde"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
#wgpu = { version = "0.12", features = ["spirv", "serde", "webgl"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["serde", "webgl"] }
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.57"
features = [
    'console',
    'Blob',
    'Document',
    'Element',

    'Gpu',

    'HtmlCanvasElement',
    'Request',
    'Response',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

[build-dependencies]
naga = { git = "https://github.com/gfx-rs/naga", features = ["wgsl-in"] }
